# cpp

./: .directory  .gitignore  CMakeLists.txt  MyLib.lib  script.sh  temptest  temptest.cpp
ASCII/: main  main.cpp
Agregation/: main  main.cpp
Allocator/: main  main.cpp
Async/: CMakeLists.txt  main.cpp
BankAcc/: BankAcc.sln
BankAccount/: CMakeLists.txt
Bankacc2.0/: Bankacc2.0.sln
BinSearch/: main  main.cpp
CABAC/: CABAC.pro  encoded_output.txt  input.txt  main  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
CBproject/: CBproject.cbp  CBproject.depend  CBproject.layout  main  main.cpp
CD/: CD.pro  cabac.txt  cabacencoding.cpp  cabacencoding.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Calculator/: Operation.h  main.cpp
Circle/: Circle.sln
ClassBooks/: ClassBooks.sln
Complex/: complex.cpp  complex.h  complex.h.gch  main  main.cpp
Composition body/: brain.cpp  brain.h  heart.cpp  heart.h
Composition_body/: CMakeLists.txt  body.cpp  body.h  brain.cpp  brain.h  brain.h.gch  heart.cpp  heart.h  heart.h.gch  main.cpp
ConstrCopying/: main  main.cpp
ConstrInheritance/: ConstrInheritance.pro  a.cpp  a.h  b.cpp  b.h  main.cpp
Constructor&Destructor/: main  main.cpp
ContactManager/: Contacts.txt  main  main.cpp
ConvertTemperature/: ConvertTemperature.sln
CristmasTree/: main  main.cpp
DinamicArr/: main  main.cpp
DynamicArray/: array.h  main.cpp
Employee/: Employee.sln
Enum/: main  main.cpp
SFMLtest/: CMakeCache.txt  CMakeLists.txt  Makefile  MyGame  cmake_install.cmake  main  main.cpp
qtproject/: CMakeLists.txt  main.cpp
(+1867 files in other folders)
